--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "crypto-js": "^4.1.1",
     "intro.js": "^5.0.0",
     "jquery": "^3.6.0",
+    "ng-apexcharts": "^1.7.1",
     "ngx-cookie-service": "^13.1.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
