--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.0.0",
     "@syncfusion/ej2-angular-navigations": "^19.4.41",
     "angular-svg-icon": "^13.0.0",
+    "apexcharts": "^3.35.3",
     "bootstrap": "^4.6.1",
     "chart.js": "^2.9.4",
     "crypto-js": "^4.1.1",
